<resources>
    <string name="app_name">Handel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuracion</string>
    <string name="action_legal">Legal</string>
    <string name="action_info">Info</string>
    <string name="title_activity_login">Handel</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario o Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permlab_flashlight">Param Lab</string>
    <string name="permdesc_flashlight">Param Desc</string>
    <string name="take_picture">Take picture</string>
    <string name="title_activity_busqueda_servicio">BusquedaServicioActivity</string>

    <!-- Mensajes Web Services -->
    <string name="ok">Exito</string>
    <string name="error">Error</string>
    <string name="invalid_parameters">Parametros Invalidos</string>
    <string name="no_data_found">No se encontro Informacion</string>
    <string name="error_exired_token">La sesion ha expirado</string>
    <string name="service_not_found">Servicio invalido</string>
    <string name="unauthorized">No autorizado</string>
    <string name="error_internal">Error Interno</string>

    <string name="hint_search">¿Qué buscas?</string>
    <string name="search">Buscar</string>
    <!-- Menu items -->

    <string name="buys">Mis Compras</string>
    <string name="favorites">Favoritos</string>
    <string name="legal">Legal</string>
    <string name="map">Mapa</string>
    <string name="messages">Mansajes</string>
    <string name="services">Servicios</string>
    <string name="cfg_account">Configuración de Cuenta</string>
    <string name="payment_methods">Métodos de Pago</string>
    <string name="version">Versión 1.0.0</string>
    <string name="exit">Salir</string>

    <!-- Errores de WS -->
    <string name="error_service">Error de servicio</string>
    <string name="error_timeout">Tiempo de espera excedido</string>
    <string name="error_connection">Error de Conexión</string>
    <string name="error_server_down">Servicio temporalemnte fuera de servicio</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="title_activity_metodos_pago">Metodos de Pago</string>
    <!-- Titulos Activities-->

    <!-- Titulos de Procesos-->
    <string name="process_close_sesion">com.handel.process.ProcessCloseSesion</string>
    <string name="title_activity_maps">Ubcación</string>
    <string name="title_activity_servicios">Mis Servicios</string>
</resources>
